--- a/css/styles.css
+++ b/css/styles.css
@@ -615,8 +615,7 @@ img {
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  align-items: center;
-  gap: 8px;
+  display: inline-flex;
 }
 
 .checkbox-label-link {
@@ -629,7 +628,6 @@ img {
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  display: flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
