--- a/css/styles.css
+++ b/css/styles.css
@@ -412,7 +412,7 @@ img {
 }
 
 .footer-social-links-container {
-  margin-right: 80px;
+  margin-right: auto;
 }
 
 .footer-social-links-text {
@@ -550,6 +550,8 @@ img {
 }
 
 .modal-input {
+  color: #2e2f42;
+  font-size: 12px;
   width: 100%;
   height: 40px;
   padding-left: 38px;
@@ -571,6 +573,7 @@ img {
 .input-wrapper {
   position: relative;
 }
+
 .input-icon {
   position: absolute;
   left: 16px;
@@ -584,7 +587,7 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
+  color: #2e2f42;
   width: 100%;
   height: 120px;
   padding: 8px 16px;
@@ -639,7 +642,8 @@ img {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-checkbox:checked + .checkbox-label > .modal-label-box {
+.modal-checkbox:checked + .checkbox-label > .modal-label-box,
+.modal-checkbox:focus + .checkbox-label > .modal-label-box {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -661,6 +665,11 @@ img {
   border-radius: 4px;
   font-size: 16px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.submit-btn:hover, .submit-btn:focus {
+  background: var(--OCEAN, #404BBF);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .subscribe-text {
@@ -711,6 +720,12 @@ img {
   background-color: #4d5ae5;
   border: none;
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn:hover, .subscribe-btn:focus {
+  background: var(--OCEAN, #404BBF);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .icon-send {
