--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ img {
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
 }
+
 .container {
   max-width: 1158px;
   padding: 0 15px;
@@ -116,13 +117,13 @@ img {
   letter-spacing: 0.02em;
 }
 
-.menu-first-link {
+.current {
   position: relative;
   color: var(--accent-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-first-link::after {
+.current::after {
   position: absolute;
   content: '';
   left: 0;
