--- a/css/styles.css
+++ b/css/styles.css
@@ -639,11 +639,14 @@ img {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-checkbox:checked + .checkbox-label > .modal-label-box,
-.modal-checkbox:focus + .checkbox-label > .modal-label-box {
+.modal-checkbox:checked + .checkbox-label > .modal-label-box {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
+}
+
+.modal-checkbox:focus + .checkbox-label > .modal-label-box {
+  border-color: #404bbf;
 }
 
 .submit-btn {
